# isometricRenderer

./: .gitignore  CMakeLists.txt  README.md
include/: gameClasses.hpp  gameGlobalVariables.h  main.hpp  misc.hpp  other.hpp  worldgen.hpp
src/: main.cpp  misc.cpp  other.cpp  worldgen.cpp
